added FontAwesome and used in the UI fixed some bugs added screenshots updated readme.md with more information

--- a/BlinkStickBusylightClient/BlinkStickBusylightClient.csproj
+++ b/BlinkStickBusylightClient/BlinkStickBusylightClient.csproj
@@ -141,6 +141,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Resource Include="Resources\fonts\FontAwesome.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
