Taskbar Color should be considered for the taskbar icon #1

--- a/BlinkStickBusylightClient/BlinkStickBusylightClient.csproj
+++ b/BlinkStickBusylightClient/BlinkStickBusylightClient.csproj
@@ -152,5 +152,8 @@
     <Resource Include="Resources\favicon.ico" />
     <Resource Include="Resources\trayicon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\trayiconBlack.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
